--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <ul class="ancor">
                         <li><a href="" class="ancor-text">About Us</a></li>
                         <li><a href="" class="ancor-text">Developers</a></li>
-                        <li><a href="" class="ancor-follow">Follow Us On</a></li>
+                        <li><a href="" class="ancor-follow">Follow Us On<i title="YouTube" class="fa-brands fa-youtube" style="color: #eb0f25;"></i><i class="fa-brands fa-tiktok"></i></a></li>
                     </ul>
             </nav>
             <section class="header">
@@ -25,9 +25,10 @@
                     <h1 class="header-h1">G.O.A.T.</h1>
                     <div class="header-discription">
                         <div class="header-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c7.6-4.2 16.8-4.1 24.3 .5l144 88c7.1 4.4 11.5 12.1 11.5 20.5s-4.4 16.1-11.5 20.5l-144 88c-7.4 4.5-16.7 4.7-24.3 .5s-12.3-12.2-12.3-20.9V168c0-8.7 4.7-16.7 12.3-20.9z"/></svg>
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><style>svg{fill:#fa0032}</style><path d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V274.7l-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7V32zM64 352c-35.3 0-64 28.7-64 64v32c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V416c0-35.3-28.7-64-64-64H346.5l-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352H64zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"/></svg>
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512"><path d="M112 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm40 304V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V256.9L59.4 304.5c-9.1 15.1-28.8 20-43.9 10.9s-20-28.8-10.9-43.9l58.3-97c17.4-28.9 48.6-46.6 82.3-46.6h29.7c33.7 0 64.9 17.7 82.3 46.6l58.3 97c9.1 15.1 4.2 34.8-10.9 43.9s-34.8 4.2-43.9-10.9L232 256.9V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V352H152z"/></svg>
+                            <i class="fa-solid fa-circle-play" style="color: #f50f0f;"></i>
+                            <i class="fa-solid fa-download" style="color: #fa0025;"></i>
+                            <i class="fa-solid fa-people-pulling" style="color: #f71818;"></i>
+
                         </div>
                         <div>
                             <p class="header-pera">1-Click instant play</p>
@@ -75,7 +76,7 @@
                     </div>
                     <div class="card-3">
                         <img src="images/Rectangle 7.png" alt="">
-                        <button class="btn-watch"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c7.6-4.2 16.8-4.1 24.3 .5l144 88c7.1 4.4 11.5 12.1 11.5 20.5s-4.4 16.1-11.5 20.5l-144 88c-7.4 4.5-16.7 4.7-24.3 .5s-12.3-12.2-12.3-20.9V168c0-8.7 4.7-16.7 12.3-20.9z"/></svg>Watch Now</button>
+                        <button class="btn-watch"><i class="fa-solid fa-circle-play" style="color: #f50f0f;"></i>Watch Now</button>
                         <p>Breaking game records like OG</p>
                     </div>
                     <div class="card">
