position set up

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                         </div>
                         <div>
                             <p class="header-pera">1-Click instant play</p>
-                    <p class="header-pera">No Download</p>
-                    <p class="header-pera">1000s of supported online games</p>
+                            <p class="header-pera">No Download</p>
+                             <p class="header-pera">1000s of supported online games</p>
                         </div>
                     </div>
                      <div class="button">
@@ -50,7 +50,7 @@
         <main>
             <section class="gamer">
                 <div>
-                    <img src="images/pngwing 4.png" alt="" width="700px" height="400px">
+                    <img src="images/pngwing 4.png" alt="">
                 </div>
                 <div class="gamer-text">
                     <h3 class="gamer-text-h3">We are gamer</h3>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="card-3">
                         <img src="images/Rectangle 7.png" alt="">
-                        <button class="btn-watch"><i class="fa-solid fa-circle-play" style="color: #f50f0f;"></i>Watch Now</button>
+                        <button class="btn-watch"><i class="fa-solid fa-circle-play" style="color: #f5f3f3;"></i>Watch Now</button>
                         <p>Breaking game records like OG</p>
                     </div>
                     <div class="card">
@@ -93,10 +93,9 @@
                     <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
                 </div>
                 <div class="play-img">
-                    <img src="images/Rectangle 55.png" alt="" width="532" height="700px">
+                    <img src="images/Rectangle 55.png" alt="">
                     <div class="img-small">
-                        <img  src="images/Rectangle 66.png" alt="" width="100px"
-                    height="350px">
+                        <img  src="images/Rectangle 66.png" alt="">
                     </div>
                 </div>
             </section>
